# m3l

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/api_reference/: audio.rst  audiovisual.rst  common.rst  index.rst  utils.rst
docs/source/user_guide/: index.md
m3l/audio/common/datasets/: __init__.py  cliplabeled_hdf5_dataset.py  framelabeled_hdf5_dataset.py  unlabeled_hdf5_dataset.py
m3l/audio/common/encoders/: __init__.py  beats.py  cnn14.py  dcase_crnn.py
m3l/audio/common/postprocessors/: __init__.py  median_filter.py
m3l/audio/common/preprocessors/: __init__.py  batch_normalize.py  clamp.py  gaussian_noise.py  mixup.py  normalize.py  preprocessor.py  scale.py  spec_augment.py  time_roll.py  time_warp.py
m3l/audio/sed/: detect.py
m3l/audio/sed/callbacks/: __init__.py  visualizer.py
m3l/audio/sed/heads/: __init__.py  attention_head.py  linear_head.py
m3l/audio/sed/models/: __init__.py  strong_model.py  strong_weak_model.py
m3l/audio/sed/tasks/: __init__.py  sed_task.py  weak_ema_sed_task.py
m3l/audio/tagging/callbacks/: __init__.py  visualizer.py
m3l/audio/tagging/models/: __init__.py  cnn14.py  tagging_model.py
m3l/audio/tagging/tasks/: tagging_task.py
m3l/audiovisual/avc/tasks/: __init__.py  avc_task.py
m3l/audiovisual/common/datasets/: __init__.py  unlabeled_hdf5_dataset.py
m3l/common/: nn.py
m3l/common/callbacks/: __init__.py  exponential_warmup_annealer.py  visualizer.py
m3l/common/datamodules/: __init__.py  multi_datamodule.py  single_datamodule.py
m3l/common/lr_schedulers/: __init__.py  exponential_warmup.py  sequential_lr.py
m3l/common/nn/: __init__.py  sinusoidal_positional_embedding.py  transformer.py
m3l/utils/: __init__.py  balanced_sampler.py  inference.py  label_loader.py
m3l/visual/common/: __init__.py  nest_collator.py
recipes/: globals.mk  globals.yaml
recipes/audioset/: Makefile  avc.mk  config.yaml  sed.mk  tagging.mk
recipes/audioset/scripts/: convert_mp4.py  convert_strong_groundtruth.py  convert_wav.py  dump_strong_label_names.py  dump_weak_label_names.py  make_audio_strong_hdf5.py  make_audio_weak_hdf5.py  make_audiovisual_unsupervised_hdf5.py  make_hdf5.py  prepare_balanced_sampler.py  prepare_dataset.py
recipes/clusters/: abci3.py  abci3.yaml
recipes/desed/: Makefile  README.md  config.yaml
recipes/desed/metadata/: label_names.json
recipes/desed/scripts/: 0_prepare_dataset.py  1_dump_ground_truth.py  1_summarize_durations.py  2_make_hdf5_strong.py  2_make_hdf5_unsupervised.py  2_make_hdf5_weak.py  5_evaluate_sed_scores.py  dump_ground_truth.py  evaluate_sed_scores.py  make_hdf5_strong.py  make_hdf5_unsupervised.py  make_hdf5_weak.py  prepare_dataset.py  summarize_durations.py  summarize_scores.py
recipes/urban-sed/: Makefile
recipes/urban-sed/metadata/: label_names.json
recipes/urban-sed/scripts/: dump_ground_truth.py  make_hdf5_strong.py  prepare_dataset.py  summarize_durations.py  summarize_scores.py
(+21 files in other folders)
