[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "m3l"
authors = [{name = "Yoshiaki Bando", email = "y.bando@aist.go.jp"}]
readme = "README.md"
license = {file = "LICENSE"}
description = "Multimodal Machine Listening Toolkit"
version = "2026.3.0"

dependencies = [
    "aiaccel>=2025.04,<=2025.12.1",
    "einops",
    "hydra-core@git+https://github.com/facebookresearch/hydra.git",
    "kornia",
    "librosa",
    "lightning",
    "matplotlib",
    "numpy",
    "scipy",
    "omegaconf@git+https://github.com/omry/omegaconf.git",
    "pyyaml",
    "resampy",
    "rich",
    "sed_scores_eval",
    "soundfile",
    "timm",
    "torch",
    "torchaudio",
    "torchmetrics",
    "torchvision"
]

[project.urls]
Home = "https://ybando.jp"

[project.optional-dependencies]
dev = [
    "mpi4py",
    "h5py",
    "tensorboard",
    "tensorboard-data-server",
    "mir_eval",
    "pesq",
    "myst-parser",
    "markdown-it-py>=3.0",
    "ruff",
    "pystoi",
    "pandas",
    "sphinx",
    "sphinxcontrib-jquery",
    "sphinx-intl",
    "sphinx-fontawesome",
    "sphinx-rtd-theme",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinx_design",
    "shibuya"
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.11"
openjdk = "*"
blas = { version = "*", build = "mkl" }
cuda = "12.8.*"

[tool.pixi.pypi-dependencies]
m3l = { path = ".", editable = true }
pkgconfig = "*"
cupy-cuda12x = "*"

[tool.pixi.feature.dev.dependencies]
# build tools
make = ">=4.4"
cmake = "*"
pre-commit = "*"
direnv = "*"
# mpi
openmpi = { version = "4.1.*", build = "external_*" }
hdf5 = { version = "*", build = "mpi_openmpi*" }
h5py = { version = "*", build = "mpi_openmpi*" }
mpi4py = "*"
# dev-tools
procps-ng = ">=4.0.4,<5"
byobu = "*"
tmux = "<3.6"
ipython = "*"
optuna = "*"
jupyter = "*"
markdown-it-py = ">=3.0,<4.0"
# multimedia tools
sox = "*"
ffmpeg = ">=8.0.0"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]


[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  "m3l/third/",
]


[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["B905"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

section-order = [
    "future",
    "typing",
    "standard-library",
    "utilities",
    "datascience",
    "torch",
    "torch-third-party",
    "third-party",
    "audio",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.isort.sections]
"typing" = ["typing"]
"utilities" = ["progressbar", "omegaconf", "hydra"]
"datascience" = ["numpy", "scipy", "pandas", "matplotlib", "opt_einsum", "einops"]
"torch" = ["torch"]
"torch-third-party" = ["torchaudio", "torchvision", "auraloss", "lightning", "einops.layers"]
"audio" = ["librosa", "pypesq", "pystoi", "soundfile"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

